erDiagram
    Users ||--o{ Promises : creates
    Users ||--o{ Verifications : submits
    Users ||--o{ Votes : casts
    Users ||--o{ ActivityLogs : generates
    Promises ||--o{ Verifications : has
    Verifications ||--o{ Votes : receives
    Verifications ||--o{ EvidenceFiles : contains
    
    Users {
        uuid id PK "Primary key"
        varchar email UK "Unique email address"
        varchar username UK "Unique username"
        varchar password_hash "Argon2 hashed password"
        integer citizen_score "Calculated score (default 0)"
        enum citizen_title "Citizen, Watchdog, Guardian, Champion, Sentinel"
        decimal reputation "Weighted reputation (default 1.0)"
        boolean is_verified "Email verification status"
        boolean mfa_enabled "MFA enrollment status"
        varchar mfa_secret "Encrypted TOTP secret (nullable)"
        jsonb preferences "UI settings, notifications (default {})"
        timestamp created_at "Account creation timestamp"
        timestamp updated_at "Last update timestamp"
    }
    
    Promises {
        uuid id PK "Primary key"
        varchar title "Promise title (max 200 chars)"
        text description "Detailed promise description"
        varchar category "Category: infrastructure, healthcare, education, etc"
        varchar leader_name "Politician name"
        varchar leader_party "Political party"
        varchar constituency "Electoral constituency"
        date promised_date "Date promise was made"
        date target_completion_date "Expected completion date (nullable)"
        varchar location "Location/region (India state/city)"
        enum status "pending, in_progress, fulfilled, broken, disputed"
        uuid created_by FK "References Users(id)"
        jsonb metadata "Flexible fields (budget, source_url, tags)"
        tsvector search_vector "Full-text search vector (GIN indexed)"
        timestamp created_at "Promise submission timestamp"
        timestamp updated_at "Last update timestamp"
    }
    
    Verifications {
        uuid id PK "Primary key"
        uuid promise_id FK "References Promises(id) ON DELETE CASCADE"
        uuid submitted_by FK "References Users(id)"
        enum completion_status "not_started, partial, completed, exceeded"
        integer quality_rating "1-5 scale (nullable)"
        enum timeline_status "early, on_time, delayed, very_delayed"
        enum budget_status "under_budget, on_budget, over_budget, unknown"
        integer impact_rating "1-5 scale (nullable)"
        text description "Verification explanation (max 2000 chars)"
        enum verification_status "pending, approved, rejected, disputed"
        integer community_votes_for "Count of approval votes"
        integer community_votes_against "Count of rejection votes"
        boolean expert_reviewed "Expert panel review flag (default false)"
        jsonb evidence_metadata "Evidence summary (file_count, types)"
        timestamp created_at "Verification submission timestamp"
        timestamp updated_at "Last update timestamp"
    }
    
    Votes {
        uuid id PK "Primary key"
        uuid verification_id FK "References Verifications(id) ON DELETE CASCADE"
        uuid user_id FK "References Users(id)"
        enum vote_type "approve, reject"
        decimal weight "Vote weight based on citizen_title (1.0-5.0)"
        timestamp created_at "Vote cast timestamp"
    }
    
    EvidenceFiles {
        uuid id PK "Primary key"
        uuid verification_id FK "References Verifications(id) ON DELETE CASCADE"
        enum file_type "image, video"
        varchar storage_url "Cloudflare R2 URL"
        integer file_size_bytes "File size in bytes"
        varchar thumbnail_url "Thumbnail URL (images only, nullable)"
        jsonb metadata "EXIF data, dimensions, duration"
        timestamp uploaded_at "Upload timestamp"
    }
    
    ActivityLogs {
        uuid id PK "Primary key"
        uuid user_id FK "References Users(id) ON DELETE SET NULL"
        varchar action_type "login, promise_created, verification_submitted, vote_cast, etc"
        jsonb metadata "Action-specific data"
        varchar ip_address "User IP address"
        timestamp created_at "Log timestamp"
    }
